--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="https://kit.fontawesome.com/057fe78504.js" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;800&display=swap" rel="stylesheet">
+  <link href='https://css.gg/menu-left-alt.css' rel='stylesheet'>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -19,9 +20,16 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark container-nav">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ankur</a>
+
+        <div>
+          <a class="logo-lnk" href="#">
+            <img src="images/logo.png" alt="">
+            <span>Ankur<br>Kumar</span></a>
+
+        </div>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span><i class="gg-menu-left-alt"></i></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
@@ -51,7 +59,7 @@
     <div class="container-fluid container-home">
       <div class="row">
         <div class="col-md-5 container-image">
-          <img src="images/ankur.jpg" alt="">
+          <img src="images/ankur2.jpg" alt="">
         </div>
 
         <div class="col-md-7 container-intro">
@@ -64,7 +72,7 @@
               <h3>SOFTWARE ENGINEER</h3>
             </div>
             <div class="summary">
-              <p>Hello! I am Web Developer from United States, New York. I have<br/>rich experience in web site design and building, also I am good<br/>at wordpress. I love to talk with you about our unique.
+              <p>Hello! I am a Software Engineer from Noida, India. I have<br />rich experience in web site design and building, also I am good<br />at mobile app development. Feel free to frop a Hi if you want to know more.
             </div>
             <div class="contact-me">
               <button type="button" class="btn btn-outline-primary contact-button"><i class="fas fa-phone-alt"></i></i>&nbsp;&nbsp;&nbsp;CONTACT ME</button>
