--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -12,41 +13,41 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;800&display=swap" rel="stylesheet">
   <link href='https://css.gg/menu-left-alt.css' rel='stylesheet'>
+  <link href='https://css.gg/close.css' rel='stylesheet'>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar">
   <section id="navigation">
 
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark container-nav">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark container-nav">
       <div class="container-fluid">
-
         <div>
           <a class="logo-lnk" href="#">
             <img src="images/logo.png" alt="">
             <span>Ankur<br>Kumar</span></a>
-
         </div>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span><i class="gg-menu-left-alt"></i></i></span>
+          <!-- <span class="close"><i class="gg-close"></i></span> -->
+          <span class="toggle-icon"><i class="gg-menu-left-alt"></i></i></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">EXPERIENCE</a>
+              <a class="nav-link" href="#experience">EXPERIENCE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">SKILLS</a>
+              <a class="nav-link" href="#skills">SKILLS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">PROJECTS</a>
+              <a class="nav-link" href="#education">EDUCATION</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CONTACT</a>
+              <a class="nav-link" href="#contact">CONTACT</a>
             </li>
           </ul>
           <button type="button" class="btn btn-outline-primary download-button"><i class="fas fa-download"></i>&nbsp;&nbsp;&nbsp;DOWNLOAD CV </button>
@@ -72,7 +73,7 @@
               <h3>SOFTWARE ENGINEER</h3>
             </div>
             <div class="summary">
-              <p>Hello! I am a Software Engineer from Noida, India. I have<br />rich experience in web site design and building, also I am good<br />at mobile app development. Feel free to frop a Hi if you want to know more.
+              <p>Hello! I am a Software Engineer from Noida, India. I have rich experience in web site design and building, also I am good at mobile app development.<br/>Feel free to frop a Hi if you want to know more.
             </div>
             <div class="contact-me">
               <button type="button" class="btn btn-outline-primary contact-button"><i class="fas fa-phone-alt"></i></i>&nbsp;&nbsp;&nbsp;CONTACT ME</button>
@@ -84,10 +85,10 @@
   </section>
 
   <section id="experience">
-
+    EXPERIENCE
   </section>
 
-  <section id="abilities">
+  <section id="skills">
 
   </section>
 
