--- a/index.html
+++ b/index.html
@@ -84,8 +84,16 @@
     </div>
   </section>
 
+  <hr>
   <section id="experience">
-    EXPERIENCE
+    <div class="experience-title">
+      <h2>Experience</h2>
+    </div>
+    <div class="container-fluid container-experience">
+      <div class="row">
+        
+      </div>
+    </div>
   </section>
 
   <section id="skills">
