--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <h3>SOFTWARE ENGINEER</h3>
             </div>
             <div class="summary">
-              <p>Hello! I am a Software Engineer from Noida, India. I have rich experience in web site design and building, also I am good at mobile app development.<br/>Feel free to frop a Hi if you want to know more.
+              <p>Hello! I am a Software Engineer from Noida, India. I have rich experience in web site design and building, also I am good at mobile app development.<br />Feel free to frop a Hi if you want to know more.
             </div>
             <div class="contact-me">
               <button type="button" class="btn btn-outline-primary contact-button"><i class="fas fa-phone-alt"></i></i>&nbsp;&nbsp;&nbsp;CONTACT ME</button>
@@ -90,8 +90,29 @@
       <h2>Experience</h2>
     </div>
     <div class="container-fluid container-experience">
-      <div class="row">
-        
+      <div id="experience-carousel" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner row w-100 mx-auto" role="listbox">
+          <div class="carousel-item col-lg-4 active">
+            <img src="images/8.jpg" alt="img8">
+          </div>
+          <div class="carousel-item col-lg-4">
+            <img src="images/8.jpg" alt="img8">
+          </div>
+          <div class="carousel-item col-lg-4">
+            <img src="images/8.jpg" alt="img8">
+          </div>
+          <div class="carousel-item col-lg-4">
+            <img src="images/8.jpg" alt="img8">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#experience-carousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#experience-carousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
   </section>
