Added experience section

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     </div>
     <div class="container experience-content">
       <div class="row mx-auto my-auto justify-content-center">
-        <div id="recipeCarousel" class="carousel slide" data-bs-interval="false">
-          <!-- data-bs-ride="carousel" -->
+        <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+          <!-- data-bs-interval="false" -->
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
               <div class="col-md-4">
