--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
     </div>
     <div class="carousel-controls">
       <button class="carousel-control-prev" type="button" data-bs-target="#recipeCarousel" data-bs-slide="prev">
-        <span class="circular-icon" aria-hidden="true"><i class="fas fa-chevron-left"></i></span>
+        <span class="" aria-hidden="true"><i class="fas fa-chevron-left"></i></span>
         <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#recipeCarousel" data-bs-slide="next">
-        <span class="circular-icon"><i class="fas fa-chevron-right"></i></span>
+        <span class=""><i class="fas fa-chevron-right"></i></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
