Added experience section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <!-- <span class="close"><i class="gg-close"></i></span> -->
-          <span class="toggle-icon"><i class="gg-menu-left-alt"></i></i></span>
+          <i class="gg-menu-left-alt"></i></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
@@ -149,16 +149,18 @@
       </div>
     </div>
     <div class="carousel-controls">
-      <button class="carousel-control-prev" type="button" data-bs-target="#recipeCarousel" data-bs-slide="prev">
+      <button class="carousel-control-prev circular-icon" type="button" data-bs-target="#recipeCarousel" data-bs-slide="prev">
         <span class="" aria-hidden="true"><i class="fas fa-chevron-left"></i></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#recipeCarousel" data-bs-slide="next">
+      <button class="carousel-control-next circular-icon" type="button" data-bs-target="#recipeCarousel" data-bs-slide="next">
         <span class=""><i class="fas fa-chevron-right"></i></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
   </section>
+
+  <hr>
 
   <section id="skills">
 
