Added animation for skills

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
   <hr>
 
   <section id="experience">
-    <div class="experience-title">
-      <h2>Experience<br><span class="subtitle">WORKING WITH</span></h2>
+    <div class="section-title">
+      <h2>Experience<br><span class="section-subtitle">WORKING WITH</span></h2>
     </div>
     <div class="container experience-content">
       <div class="row mx-auto my-auto justify-content-center">
@@ -163,7 +163,124 @@
   <hr>
 
   <section id="skills">
+    <div class="section-title">
+      <h2>Coding Skills<br><span class="section-subtitle">DEVELOPING ON</span></h2>
+    </div>
+    <div class="container-fluid skills-content">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>JAVA</h6>
+              <span>90%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="JAVA">
+              </div>
+            </div>
+          </div>
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>SPRING</h6>
+              <span>80%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="SPRING">
+              </div>
+            </div>
+          </div>
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>SPRING BOOT</h6>
+              <span>90%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="SPRING-BOOT">
+              </div>
+            </div>
+          </div>
 
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>HIBERNATE</h6>
+              <span>50%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="HIBERNATE">
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>Apache Kafka</h6>
+              <span>50%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="KAFKA">
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="col-lg-6">
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>HTML</h6>
+              <span>60%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="HTML">
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>CSS</h6>
+              <span>50%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="CSS">
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>BOOTSTRAP</h6>
+              <span>40%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="BOOTSTRAP">
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>JAVASCRIPT</h6>
+              <span>30%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="JAVASCRIPT">
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-box">
+            <div class="skill-title">
+              <h6>REACT.JS</h6>
+              <span>5%</span>
+            </div>
+            <div class="skill-percentage">
+              <div class="REACT">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section id="education">
