--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href="#contact">CONTACT</a>
             </li>
           </ul>
-          <button type="button" class="btn btn-outline-primary download-button"><i class="fas fa-download"></i>&nbsp;&nbsp;&nbsp;DOWNLOAD CV </button>
+          <button type="button" class="btn btn-outline-primary download-button"><i class="fas fa-download"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DOWNLOAD CV </button>
         </div>
       </div>
     </nav>
@@ -73,7 +73,7 @@
               <p>Hello! I am a Software Engineer from Noida, India. I have rich experience in web site design and building, also I am good at mobile app development.<br />Feel free to frop a Hi if you want to know more.
             </div>
             <div class="contact-me">
-              <button type="button" class="btn btn-outline-primary contact-button"><i class="fas fa-phone-alt"></i></i>&nbsp;&nbsp;&nbsp;CONTACT ME</button>
+              <button type="button" class="btn btn-outline-primary contact-button"><i class="fas fa-phone-alt"></i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTACT ME</button>
             </div>
           </div>
         </div>
@@ -286,12 +286,91 @@
   <hr>
 
   <section id="education">
+    <div class="section-title">
+      <h2>Education<br><span class="section-subtitle">STUDIED AT</span></h2>
+    </div>
+    <div class="container experience-content">
+      <div class="row mx-auto my-auto justify-content-center">
+        <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+          <!-- data-bs-interval="false" -->
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <div class="col-md-4">
+                <div class="experience-item">
+                  <div class="experience-top">
+                    <h6>2012-2016</h6>
+                    <div class="company-name">B.Tech(CSE)<span style="font-size: 0.7rem;"><br>Lovely Professional<br>University, Punjab, IN</span></div>
+                  </div>
+                  <div class="experience-bottom">
+                    <p>I majored my graduation in Computer Science Engineering with a CGPA of 7.82</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col-md-4">
+                <div class="experience-item">
+                  <div class="experience-top">
+                    <h6>2010-2011</h6>
+                    <div class="company-name">Intermediate<span style="font-size: 0.7rem;"><br>Jawahar Navodaya<br>Vidyalaya, Saharanpur, IN</span></div>
+                  </div>
+                  <div class="experience-bottom">
+                    <p>I had PCM in my intermediate class as the major subjects and secured an aggregate percentage of 87.4%.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="col-md-4">
+                <div class="experience-item">
+                  <div class="experience-top">
+                    <h6>2008-2009</h6>
+                    <div class="company-name">Matric<span style="font-size: 0.7rem;"><br>Jawahar Navodaya<br>Vidyalaya, Saharanpur, IN</span></div>
+                  </div>
+                  <div class="experience-bottom">
+                    <p>I had Science as the major subject in my 10th class and secured an aggregate percentage of 90.4%.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
 
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-controls">
+      <button class="carousel-control-prev circular-icon" type="button" data-bs-target="#recipeCarousel" data-bs-slide="prev">
+        <span class="" aria-hidden="true"><i class="fas fa-chevron-left"></i></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next circular-icon" type="button" data-bs-target="#recipeCarousel" data-bs-slide="next">
+        <span class=""><i class="fas fa-chevron-right"></i></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </section>
+
+  <hr>
 
   <section id="contact">
-
+    <div class="section-title">
+      <h2>Contact<br><span class="section-subtitle">LET'S Talk</span></h2>
+    </div>
+    <div class="contact-container">
+      <div class="contact-box">
+        <ul>
+          <li><span>NAME:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ankur Kumar</li>
+          <li><span>DOB:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;18-Apr-1995</li>
+          <li><span>RESIDENCE:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;India</li>
+          <li><span>ADDRESS:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Saharanpur, UP</li>
+          <li><span>PHONE:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91-8630001313</li>
+          <li><span>EMAIL:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;shiv.ankurkashyap@gmail.com</li>
+        </ul>
+      </div>
+    </div>
   </section>
+
+  <hr>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/057fe78504.js" crossorigin="anonymous"></script>
