Added education and contact section

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item">
+            <li class="nav-item menu-item">
               <a class="nav-link active" aria-current="page" href="#">HOME</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item menu-item">
               <a class="nav-link" href="#experience">EXPERIENCE</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item menu-item">
               <a class="nav-link" href="#skills">SKILLS</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item menu-item">
               <a class="nav-link" href="#education">EDUCATION</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item menu-item">
               <a class="nav-link" href="#contact">CONTACT</a>
             </li>
           </ul>
@@ -270,11 +270,11 @@
 
           <div class="skill-box">
             <div class="skill-title">
-              <h6>REACT.JS</h6>
-              <span>5%</span>
+              <h6>ANDROID APP DEVELOPMENT</h6>
+              <span>70%</span>
             </div>
             <div class="skill-percentage">
-              <div class="REACT">
+              <div class="ANDROID">
               </div>
             </div>
           </div>
@@ -366,6 +366,13 @@
           <li><span>PHONE:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+91-8630001313</li>
           <li><span>EMAIL:</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;shiv.ankurkashyap@gmail.com</li>
         </ul>
+      </div>
+    </div>
+    <div class="social-container">
+      <div class="social-box">
+        <a href="https://www.linkedin.com/in/ankurkashyapp/"><button class="social-icon"><i class="fab fa-linkedin-in"></i></button></a>
+        <a href="https://www.facebook.com/ankurkashyapp"><button class="social-icon"><i class="fab fa-facebook-f"></i></button></a>
+        <a href="https://www.instagram.com/ankurkashyapp"><button class="social-icon"><i class="fab fa-instagram"></i></button></a>
       </div>
     </div>
   </section>
