--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-            <li class="nav-item menu-item">
-              <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            <li id="home-menu" class="nav-item menu-item">
+              <a class="nav-link active" aria-current="page">HOME</a>
             </li>
-            <li class="nav-item menu-item">
-              <a class="nav-link" href="#experience">EXPERIENCE</a>
+            <li id="experience-menu" class="nav-item menu-item">
+              <a class="nav-link">EXPERIENCE</a>
             </li>
-            <li class="nav-item menu-item">
-              <a class="nav-link" href="#skills">SKILLS</a>
+            <li id="skills-menu" class="nav-item menu-item">
+              <a class="nav-link">SKILLS</a>
             </li>
-            <li class="nav-item menu-item">
-              <a class="nav-link" href="#education">EDUCATION</a>
+            <li id="education-menu" class="nav-item menu-item">
+              <a class="nav-link">EDUCATION</a>
             </li>
-            <li class="nav-item menu-item">
-              <a class="nav-link" href="#contact">CONTACT</a>
+            <li id="contact-menu" class="nav-item menu-item">
+              <a class="nav-link">CONTACT</a>
             </li>
           </ul>
           <button type="button" class="btn btn-outline-primary download-button"><i class="fas fa-download"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DOWNLOAD CV </button>
