--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <p>Hello! I am a Software Engineer from Noida, India. I have rich experience in web site design and building, also I am good at mobile app development.<br />Feel free to frop a Hi if you want to know more.
             </div>
             <div class="contact-me">
-              <button type="button" class="btn btn-outline-primary contact-button"><i class="fas fa-phone-alt"></i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTACT ME</button>
+              <button id="contact-me" type="button" class="btn btn-outline-primary contact-button"><i class="fas fa-phone-alt"></i></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CONTACT ME</button>
             </div>
           </div>
         </div>
