--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link">CONTACT</a>
             </li>
           </ul>
-          <button type="button" class="btn btn-outline-primary download-button"><i class="fas fa-download"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DOWNLOAD CV </button>
+          <a href="doc/Resume.pdf" download="Ankur-Resume" target="_blank"><button type="button" class="btn btn-outline-primary download-button"><i class="fas fa-download"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DOWNLOAD CV </button></a>
         </div>
       </div>
     </nav>
