--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container-fluid container-home">
       <div class="row">
         <div class="col-md-5 container-image">
-          <img src="images/ankur2.jpg" alt="">
+          <img src="images/photo.jpg" alt="">
         </div>
 
         <div class="col-md-7 container-intro">
